samples/_failures_safe/1761284007_86ef0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6719efe4.c: In function ‘main’:
./samples/SAFE/__tmp_6719efe4.c:133:5: error: expected expression at end of input
  133 |     if (scanf("%lf %lf %lf", &user_vec.x, &user_vec.y, &user_vec.z) !=
      |     ^~
./samples/SAFE/__tmp_6719efe4.c:133:5: error: expected declaration or statement at end of input
